tests/vm/updateErr.test.out
-------------------------------------------------------------------------------
Type Error:

Cannot index type 'PtlsList'
-------------------------------------------------------------------------------

At (line 4) (column 15) in 'tests/vm/updateErr.test'
a = [1, 2, 3] with $[0] = 1
              ^
At (line 2) (column 1) in 'tests/vm/updateErr.test'
output = [a] |> println
^
At (line 18) (column 41) in 'lib/prelude/commands.ptls'
println(value) = io.print(show(value) + "\n")
                                        ^
At (line 40) (column 11) in 'lib/prelude/show.ptls'
  start + elemStr + end
          ^
At (line 41) (column 9) in 'lib/prelude/show.ptls'
  where elemStr = container |> map(repr) |> join(sep)
        ^
At (line 14) (column 29) in 'lib/prelude/string.ptls'
  else concatStrings(result + head(strings), tail(strings))
                            ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead
                 ^
At (line 53) (column 8) in 'lib/prelude/list.ptls'
  else [head(list)] ++ prependToAll(sep, tail(list))
       ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead
                 ^
At (line 163) (column 9) in 'lib/prelude/list.ptls'
  else [func(head(list))] ++ mapList(func, tail(list))
        ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead
                 ^
At (line 163) (column 9) in 'lib/prelude/list.ptls'
  else [func(head(list))] ++ mapList(func, tail(list))
        ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead
                 ^
At (line 2) (column 11) in 'tests/vm/updateErr.test'
output = [a] |> println
          ^
